# CodeAutomation

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  AstChecker.py  CHANGELOG.md  CodeChecker.py  JobCommonService.py  Makefile  Message.py  PlatformChecker.py  README.md  code_automation_handler.py  coverage.sh  package-lock.json  package.json  pyproject.toml  serverless.yml  syn_template.py  template_checker.py  template_platform.py
.serverless/: cloudformation-template-update-stack.json  requirements  serverless-state.json
CodeAutomation/: README.md  __main__.py
CodeAutomation/auto_complete/: hivemind_mlm_handler.py  tensorflow_custom.py  torch_custom_without_eval.py
CodeAutomation/auto_complete/injection_code/: hivemind_custom.py  torch_trainer.py
auto_complete/: hivemind_mlm_handler.py  hivemind_resnet_handler.py  tensorflow_custom.py  tensorflow_trainer.py  tool.py  torch_custom_with_eval.py  torch_custom_without_eval.py  torch_trainer.py
auto_complete/injection_code/: hivemind_trainer.py  tensorflow_custom.py  tensorflow_trainer.py  torch_custom_with_eval.py  torch_custom_without_eval.py  torch_trainer.py
automation_common/: JobConst.py  Messages.py
automation_common/dao/: CodeStructureDao.py
common/: security.py
common/dao/: CodeStructureDao.py
compile/: 123.py  123.sh  Dockerfile  binary_run_file  compile.py  requirements.txt  tool.py
compile/dynamodb/: job_event.py
dynamodb/: job_event.py
scripts/: format.sh  lint.sh  static.sh  test.sh
tests/: index.html  test_accuracy_prompts.py  test_conventional.py  test_hello.py
(+5 files in other folders)
