[tool.poetry]
name = "CodeAutomation"
version = "0.0.1"
description = "inject netmind interface automatically"
authors = ["yang.li <yang.li@protagonist-ai.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
astor = "^0.8.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.244"
black = "^23.1.0"
isort = "^5.11.5"
pytype = "^2023.2.9"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.0.4"
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]

[tool.isort]
profile = "black"